--- a/goiteens-hw-in-haskell.cabal
+++ b/goiteens-hw-in-haskell.cabal
@@ -17,13 +17,16 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Utils.IO, Cryptography
+  exposed-modules:     Utils.IO
+                     , Cryptography
                      , Cryptography.CaesarCipher
                      , Cryptography.CaesarCipher.BruteBreaker
                      , Cryptography.VigenereCipher
+                     , Cryptography.RSA
   -- other-modules:
   -- other-extensions:
   build-depends:       base
+                     , primes
   hs-source-dirs:      Utils/src
   default-language:    Haskell2010
   ghc-options:         -Wall
