--- a/goiteens-hw-in-haskell.cabal
+++ b/goiteens-hw-in-haskell.cabal
@@ -28,7 +28,7 @@ library
   build-depends:       base
                      , random
                      , arithmoi
-  hs-source-dirs:      Utils/src
+  hs-source-dirs:      Utils
   default-language:    Haskell2010
   ghc-options:         -Wall
 
@@ -37,15 +37,28 @@ executable GuessTheNumber
   -- other-modules:
   -- other-extensions:
   build-depends:       base, goiteens-hw-in-haskell, random
-  hs-source-dirs:      GuessTheNumber/src
+  hs-source-dirs:      GuessTheNumber
   default-language:    Haskell2010
   ghc-options:         -Wall
 
-executable NumberCapacityConverter
+executable NumberBaseConverter
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
   build-depends:       base, goiteens-hw-in-haskell
-  hs-source-dirs:      NumberCapacityConverter/src
+  hs-source-dirs:      NumberBaseConverter
+  default-language:    Haskell2010
+  ghc-options:         -Wall
+
+executable sorters
+  main-is:             Main.hs
+  other-modules:       Sorters.BubbleSort
+                     , Sorters.InsertSort
+                     , Sorters.MergeSort
+                     , Sorters.QuickSort
+                     , Sorters.SelectionSort
+  -- other-extensions:
+  build-depends:       base, optparse-applicative, containers, split
+  hs-source-dirs:      sorters
   default-language:    Haskell2010
   ghc-options:         -Wall
