--- a/goiteens-hw-in-haskell.cabal
+++ b/goiteens-hw-in-haskell.cabal
@@ -17,48 +17,69 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Utils.IO
-                     , Cryptography
-                     , Cryptography.CaesarCipher
-                     , Cryptography.CaesarCipher.BruteBreaker
-                     , Cryptography.VigenereCipher
-                     , Cryptography.RSA
-  other-modules:       Cryptography.RSA.Random
-  -- other-extensions:
-  build-depends:       base
-                     , random
-                     , arithmoi
-  hs-source-dirs:      Utils
-  default-language:    Haskell2010
-  ghc-options:         -Wall
+    exposed-modules:     Utils.IO
+                       , Cryptography
+                       , Cryptography.CaesarCipher
+                       , Cryptography.CaesarCipher.BruteBreaker
+                       , Cryptography.VigenereCipher
+                       , Cryptography.RSA
+                       , Sorters.BubbleSort
+                       , Sorters.InsertSort
+                       , Sorters.MergeSort
+                       , Sorters.QuickSort
+                       , Sorters.SelectionSort
+    other-modules:       Cryptography.RSA.Random
+    -- other-extensions:
+    build-depends:       base, random, arithmoi
+    hs-source-dirs:      Utils
+    default-language:    Haskell2010
+    ghc-options:         -Wall
 
 executable GuessTheNumber
-  main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base, goiteens-hw-in-haskell, random
-  hs-source-dirs:      GuessTheNumber
-  default-language:    Haskell2010
-  ghc-options:         -Wall
+    main-is:             Main.hs
+    -- other-modules:
+    -- other-extensions:
+    build-depends:       base
+                       , goiteens-hw-in-haskell
+                       , random
+    hs-source-dirs:      GuessTheNumber
+    default-language:    Haskell2010
+    ghc-options:         -Wall
 
 executable NumberBaseConverter
-  main-is:             Main.hs
-  -- other-modules:
-  -- other-extensions:
-  build-depends:       base, goiteens-hw-in-haskell
-  hs-source-dirs:      NumberBaseConverter
-  default-language:    Haskell2010
-  ghc-options:         -Wall
+    main-is:             Main.hs
+    -- other-modules:
+    -- other-extensions:
+    build-depends:       base
+                       , goiteens-hw-in-haskell
+    hs-source-dirs:      NumberBaseConverter
+    default-language:    Haskell2010
+    ghc-options:         -Wall
 
 executable sorters
-  main-is:             Main.hs
-  other-modules:       Sorters.BubbleSort
-                     , Sorters.InsertSort
-                     , Sorters.MergeSort
-                     , Sorters.QuickSort
-                     , Sorters.SelectionSort
-  -- other-extensions:
-  build-depends:       base, optparse-applicative, containers, split
-  hs-source-dirs:      sorters
-  default-language:    Haskell2010
-  ghc-options:         -Wall
+    main-is:             Main.hs
+    -- other-modules:
+    -- other-extensions:
+    build-depends:       base
+                       , goiteens-hw-in-haskell
+                       , optparse-applicative
+                       , containers
+                       , split
+                       , random
+    hs-source-dirs:      sorters
+    default-language:    Haskell2010
+    ghc-options:         -Wall
+
+executable sorters-benchmark
+    main-is:             Main.hs
+    -- other-modules:
+    -- other-extensions:
+    build-depends:       base
+                       , goiteens-hw-in-haskell
+                       , criterion
+                       , random
+                       , ansi-terminal
+    hs-source-dirs:      sorters-benchmark
+    default-language:    Haskell2010
+    ghc-options:         -Wall
+    build-tools:         cpphs
