--- a/goiteens-hw-in-haskell.cabal
+++ b/goiteens-hw-in-haskell.cabal
@@ -17,12 +17,15 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-    exposed-modules:     Utils.IO
+    exposed-modules:     Data.Table
+                       , Data.List.Utils
+                       , Utils.IO
                        , Cryptography
                        , Cryptography.CaesarCipher
                        , Cryptography.CaesarCipher.BruteBreaker
                        , Cryptography.VigenereCipher
                        , Cryptography.RSA
+                       , Cryptography.AES
                        , Sorters.BubbleSort
                        , Sorters.InsertSort
                        , Sorters.MergeSort
@@ -30,7 +33,7 @@ library
                        , Sorters.SelectionSort
     other-modules:       Cryptography.RSA.Random
     -- other-extensions:
-    build-depends:       base, random, arithmoi
+    build-depends:       base, random, arithmoi, bytestring, utf8-string
     hs-source-dirs:      Utils
     default-language:    Haskell2010
     ghc-options:         -Wall
