add the recovered containers-plus library

--- a/goiteens-hw-in-haskell.cabal
+++ b/goiteens-hw-in-haskell.cabal
@@ -17,7 +17,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-    exposed-modules:     Data.Table
+    exposed-modules:     Data.BinaryTree
+                       , Data.Table
                        , Data.List.Utils
                        , Utils.IO
                        , Cryptography
